--- a/admission.html
+++ b/admission.html
@@ -10,6 +10,14 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+</style>
+    
 </head>
 <body>
 
@@ -18,7 +26,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                  <img src="assets/images/logo.jpeg" alt="School Logo" class="school-logo">
-                <span class="ms-2">Gurukul Public School Baru</span>
+                <span class="ms-2">Gurukul Public School</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
