--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+        html, body {
+            max-width: 100%;
+            overflow-x: hidden;
+        }
+    </style>
+
 </head>
 <body>
 
