--- a/admission.html
+++ b/admission.html
@@ -398,7 +398,7 @@
                 <div class="col-lg-4">
                     <div class="d-flex align-items-center mb-3">
                         <div class="brand-icon bg-white text-dark">G</div>
-                        <h5 class="ms-2 mb-0">Gurukul Academy</h5>
+                        <h5 class="ms-2 mb-0">Gurukul Public School </h5>
                     </div>
                     <p class="text-white-50">Committed to providing quality education and fostering an environment of excellence.</p>
                 </div>
@@ -415,8 +415,8 @@
                     <h5 class="mb-3">Contact Us</h5>
                     <div class="text-white-50">
                         <p class="mb-2">📍( Baru ) Hamirpur,<br>Himachal Pradesh</p>
-                        <p class="mb-2">📞 +91 123 456 7890</p>
-                        <p class="mb-2">✉️ info@gurukulacademy.edu</p>
+                        <p class="mb-2">📞9418637367,7018002434</p>
+                        <p class="mb-2">✉️ gurukulbaru2021@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
