--- a/index.html
+++ b/index.html
@@ -235,8 +235,10 @@ We welcome parents to connect with us, share perspectives, and be part of a stro
                     <p class="text-white-50">Committed to providing quality education and fostering an environment of excellence.</p>
                     <div class="social-links d-flex gap-2 mt-3">
                         <a href="#" class="btn btn-outline-light btn-sm">f</a>
-                        <a href="#" class="btn btn-outline-light btn-sm">𝕏</a>
-                        <a href="#" class="btn btn-outline-light btn-sm">📷</a>
+                        <a href="#" class="btn btn-outline-light btn-sm">i</a>
+                        <a href="#" class="btn btn-outline-light btn-sm">f</a>
+                        
+                       
                     </div>
                 </div>
                 <div class="col-lg-2 col-6">
@@ -253,8 +255,8 @@ We welcome parents to connect with us, share perspectives, and be part of a stro
                     <h5 class="mb-3">Contact Us</h5>
                     <div class="text-white-50">
                         <p class="mb-2">📍( Baru ) Hamirpur,<br>Himachal Pradesh</p>
-                        <p class="mb-2">📞 +91 123 456 7890</p>
-                        <p class="mb-2">✉️ info@gurukulacademy.edu</p>
+                        <p class="mb-2">📞 9418637367,7018002434</p>
+                        <p class="mb-2">✉️gurukulbaru2021@gmail.com</p>
                     </div>
                 </div>
               <div class="col-lg-3 text-center text-lg-start">
