--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@ We welcome parents to connect with us, share perspectives, and be part of a stro
                     </div>
                     <p class="text-white-50">Committed to providing quality education and fostering an environment of excellence.</p>
                     <div class="social-links d-flex gap-2 mt-3">
-                        <a href="#" class="btn btn-outline-light btn-sm">f</a>
-                        <a href="#" class="btn btn-outline-light btn-sm">i</a>
-                        <a href="#" class="btn btn-outline-light btn-sm">f</a>
+                        <a href="https://www.facebook.com/gurukul.hamirpur?mibextid=ZbWKwL" class="btn btn-outline-light btn-sm">f</a>
+                        <a href="https://www.instagram.com/gurukulbaru0987?igsh=NXBrdHBkdmRna2Y4" class="btn btn-outline-light btn-sm">i</a>
+                        <a href="https://www.facebook.com/share/1CexP1yQdX/" class="btn btn-outline-light btn-sm">f</a>
                         
                        
                     </div>
