Transport Page Update

--- a/admission.html
+++ b/admission.html
@@ -43,6 +43,9 @@
                         <a class="nav-link" href="academics.html">Academics</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="transport.html">Transport</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="admission.html">Admissions</a>
                     </li>
                     <li class="nav-item">
