--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ We welcome parents to connect with us, share perspectives, and be part of a stro
                     <div class="text-white-50">
                         <p class="mb-2">📍( Baru ) Hamirpur,<br>Himachal Pradesh</p>
                         <p class="mb-2">📞 9418637367,7018002434</p>
-                        <p class="mb-2">✉️gurukulbaru2021@gmail.com</p>
+                       <p class="mb-2 text-wrap text-break">gurukulbaru2021@gmail.com</p>
                     </div>
                 </div>
               <div class="col-lg-3 text-center text-lg-start">
