--- a/transport.html
+++ b/transport.html
@@ -146,7 +146,7 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container text-center">
-            <h1 class="display-4 fw-bold mb-3">Safe & Secure Transportation</h1>
+            <h1 class="display-4 fw-bold mb-3 text-white">Safe & Secure Transportation</h1>
             <p class="lead text-muted">Connecting Campus to Home</p>
         </div>
     </section>
@@ -299,7 +299,8 @@
                     <div class="text-white-50">
                         <p class="mb-2">📍( Baru ) Hamirpur,<br>Himachal Pradesh</p>
                         <p class="mb-2">📞 01972358012</p>
-                        <p class="mb-2">✉️ gurukulbaru2021@gmail.com</p>
+                       <p class="mb-2 text-wrap text-break">gurukulbaru2021@gmail.com</p>
+
                     </div>
                 </div>
                 <div class="col-lg-3">
