--- a/admission.html
+++ b/admission.html
@@ -427,7 +427,7 @@
                     <div class="text-white-50">
                         <p class="mb-2">📍( Baru ) Hamirpur,<br>Himachal Pradesh</p>
                         <p class="mb-2">📞9418637367,7018002434</p>
-                        <p class="mb-2">✉️ gurukulbaru2021@gmail.com</p>
+                       <p class="mb-2 text-wrap text-break">gurukulbaru2021@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -447,8 +447,10 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
-    <!-- Custom JS -->
+   <script>
     event.preventDefault();
+
+   </script>
 
 
 </body>
