--- a/school-section.html
+++ b/school-section.html
@@ -3,14 +3,454 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Facilities - Gurukul Public School</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <style>
+        :root {
+            --primary-blue: #1e40af;
+            --accent-blue: #3b82f6;
+            --light-gray: #f8fafc;
+            --dark-text: #1e293b;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: var(--dark-text);
+            overflow-x: hidden;
+        }
+
+        .hero-section {
+            background: linear-gradient(135deg, var(--primary-blue) 0%, var(--accent-blue) 100%);
+            color: white;
+            padding: 100px 20px 80px;
+            text-align: center;
+            position: relative;
+            min-height: 350px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .hero-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.1);
+            z-index: 1;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+        }
+
+        .hero-section h1 {
+            font-size: 3.5rem;
+            font-weight: 700;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        .hero-section p {
+            font-size: 1.3rem;
+            opacity: 0.95;
+            max-width: 700px;
+            margin: 0 auto;
+        }
+
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: white;
+            color: var(--primary-blue);
+            padding: 12px 24px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s ease;
+            z-index: 3;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .back-button:hover {
+            background: var(--light-gray);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
+            color: var(--primary-blue);
+        }
+
+        .section-title {
+            font-size: 2.5rem;
+            font-weight: 700;
+            color: var(--primary-blue);
+            margin-bottom: 15px;
+            position: relative;
+            display: inline-block;
+        }
+
+        .section-title::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            width: 80px;
+            height: 4px;
+            background: var(--accent-blue);
+        }
+
+        .section-subtitle {
+            font-size: 1.1rem;
+            color: #64748b;
+            margin-bottom: 50px;
+        }
+
+        .facility-card {
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            transition: all 0.4s ease;
+            height: 100%;
+            background: white;
+        }
+
+        .facility-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 30px rgba(30, 64, 175, 0.2);
+        }
+
+        .facility-card img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            transition: transform 0.4s ease;
+        }
+
+        .facility-card:hover img {
+            transform: scale(1.1);
+        }
+
+        .facility-card .card-body {
+            padding: 25px;
+        }
+
+        .facility-card .card-title {
+            font-size: 1.4rem;
+            font-weight: 700;
+            color: var(--primary-blue);
+            margin-bottom: 15px;
+        }
+
+        .facility-card .card-text {
+            color: #64748b;
+            line-height: 1.6;
+        }
+
+        .facility-icon {
+            width: 60px;
+            height: 60px;
+            background: linear-gradient(135deg, var(--primary-blue), var(--accent-blue));
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 10px rgba(30, 64, 175, 0.3);
+        }
+
+        .gallery-section {
+            background: var(--light-gray);
+            padding: 80px 0;
+        }
+
+        .gallery-item {
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.4s ease;
+            margin-bottom: 30px;
+            position: relative;
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 25px rgba(30, 64, 175, 0.25);
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: 350px;
+            object-fit: cover;
+            display: block;
+        }
+
+        .gallery-overlay {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(to top, rgba(30, 64, 175, 0.9), transparent);
+            color: white;
+            padding: 20px;
+            transform: translateY(100%);
+            transition: transform 0.4s ease;
+        }
+
+        .gallery-item:hover .gallery-overlay {
+            transform: translateY(0);
+        }
+
+        .scroll-to-top {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 55px;
+            height: 55px;
+            background: linear-gradient(135deg, var(--primary-blue), var(--accent-blue));
+            color: white;
+            border: none;
+            border-radius: 50%;
+            font-size: 1.5rem;
+            cursor: pointer;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.4s ease;
+            box-shadow: 0 4px 15px rgba(30, 64, 175, 0.4);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .scroll-to-top.show {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .scroll-to-top:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(30, 64, 175, 0.5);
+        }
+
+        .footer {
+            background: linear-gradient(135deg, var(--primary-blue) 0%, var(--accent-blue) 100%);
+            color: white;
+            padding: 30px 20px;
+            text-align: center;
+            font-size: 1.1rem;
+        }
+
+        @media (max-width: 768px) {
+            .hero-section h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero-section p {
+                font-size: 1.1rem;
+            }
+
+            .section-title {
+                font-size: 2rem;
+            }
+
+            .back-button {
+                padding: 10px 20px;
+                font-size: 0.9rem;
+            }
+
+            .gallery-item img {
+                height: 250px;
+            }
+        }
+    </style>
 </head>
 <body>
+    <div class="hero-section">
+        <a href="index.html" class="back-button">
+            <i class="fas fa-arrow-left"></i>
+            Back to Home
+        </a>
+        <div class="hero-content">
+            <i class="fas fa-school fa-3x mb-4"></i>
+            <h1>Our Facilities</h1>
+            <p>Providing world-class learning spaces for every student.</p>
+        </div>
+    </div>
+
+    <section class="py-5">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title">School Facilities</h2>
+                <p class="section-subtitle">Explore our state-of-the-art infrastructure designed for holistic development</p>
+            </div>
+
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/library.jpg" class="card-img-top" alt="Modern Library" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Modern+Library'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-book"></i>
+                            </div>
+                            <h5 class="card-title">Modern Library</h5>
+                            <p class="card-text">A well-stocked library with thousands of books, digital resources, and a peaceful reading environment to foster a love for learning and research.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/computer-lab.jpg" class="card-img-top" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x250/3b82f6/ffffff?text=Computer+Lab'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-laptop-code"></i>
+                            </div>
+                            <h5 class="card-title">Computer Lab</h5>
+                            <p class="card-text">Advanced computer lab equipped with latest technology, high-speed internet, and modern software to enhance digital literacy and technical skills.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/science-lab.jpg" class="card-img-top" alt="Science Laboratory" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Science+Lab'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-flask"></i>
+                            </div>
+                            <h5 class="card-title">Science Laboratory</h5>
+                            <p class="card-text">Fully equipped physics, chemistry, and biology labs with modern instruments, safety equipment, and hands-on learning opportunities for students.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/classroom.jpg" class="card-img-top" alt="Smart Classroom" onerror="this.src='https://via.placeholder.com/400x250/3b82f6/ffffff?text=Smart+Classroom'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-chalkboard-teacher"></i>
+                            </div>
+                            <h5 class="card-title">Smart Classroom</h5>
+                            <p class="card-text">Interactive smart classrooms with digital boards, projectors, and multimedia tools that make learning engaging, interactive, and fun for students.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/sports.jpg" class="card-img-top" alt="Sports & Playground" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Sports+Ground'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-running"></i>
+                            </div>
+                            <h5 class="card-title">Sports & Playground</h5>
+                            <p class="card-text">Spacious playground and sports facilities including basketball, volleyball, cricket, and athletics tracks to promote physical fitness and teamwork.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="facility-card card">
+                        <img src="assets/images/hostel.jpg" class="card-img-top" alt="Secure Hostel" onerror="this.src='https://via.placeholder.com/400x250/3b82f6/ffffff?text=Secure+Hostel'">
+                        <div class="card-body">
+                            <div class="facility-icon">
+                                <i class="fas fa-bed"></i>
+                            </div>
+                            <h5 class="card-title">Secure Hostel</h5>
+                            <p class="card-text">Safe and comfortable hostel facilities with 24/7 security, nutritious meals, and a home-like environment for outstation students.</p>
+                        </div>
+                    </div>
+                </div>
 
 
-    
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script> 
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery-section">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title">Facility Gallery</h2>
+                <p class="section-subtitle">Take a visual tour of our campus infrastructure</p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="gallery-item">
+                        <img src="assets/images/library-internal.jpg" alt="Library Internal View" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Library+Interior'">
+                        <div class="gallery-overlay">
+                            <h5>Library Internal View</h5>
+                            <p>Quiet and spacious reading area</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="gallery-item">
+                        <img src="assets/images/computer-lab-view.jpg" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x350/3b82f6/ffffff?text=Computer+Lab'">
+                        <div class="gallery-overlay">
+                            <h5>Computer Lab</h5>
+                            <p>Modern systems and learning environment</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="gallery-item">
+                        <img src="assets/images/science-lab-view.jpg" alt="Science Lab" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Science+Lab'">
+                        <div class="gallery-overlay">
+                            <h5>Science Lab</h5>
+                            <p>Hands-on experimental learning space</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p class="mb-0">Gurukul Public School — Excellence Through Education</p>
+    </footer>
+
+    <button class="scroll-to-top" id="scrollToTop">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const scrollToTopBtn = document.getElementById('scrollToTop');
+
+        window.addEventListener('scroll', function() {
+            if (window.pageYOffset > 300) {
+                scrollToTopBtn.classList.add('show');
+            } else {
+                scrollToTopBtn.classList.remove('show');
+            }
+        });
+
+        scrollToTopBtn.addEventListener('click', function() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+    </script>
 </body>
 </html>
