--- a/school-section.html
+++ b/school-section.html
@@ -316,7 +316,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="facility-card card">
-                        <img src="assets/images/computer-lab.jpg" class="card-img-top" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x250/3b82f6/ffffff?text=Computer+Lab'">
+                        <img src="assets/images/computer_lab.jpg" class="card-img-top" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x250/3b82f6/ffffff?text=Computer+Lab'">
                         <div class="card-body">
                             <div class="facility-icon">
                                 <i class="fas fa-laptop-code"></i>
@@ -329,7 +329,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="facility-card card">
-                        <img src="assets/images/science-lab.jpg" class="card-img-top" alt="Science Laboratory" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Science+Lab'">
+                        <img src="assets/images/science_lab.jpg" class="card-img-top" alt="Science Laboratory" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Science+Lab'">
                         <div class="card-body">
                             <div class="facility-icon">
                                 <i class="fas fa-flask"></i>
@@ -355,7 +355,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="facility-card card">
-                        <img src="assets/images/sports.jpg" class="card-img-top" alt="Sports & Playground" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Sports+Ground'">
+                        <img src="assets/images/ground.jpg" class="card-img-top" alt="Sports & Playground" onerror="this.src='https://via.placeholder.com/400x250/1e40af/ffffff?text=Sports+Ground'">
                         <div class="card-body">
                             <div class="facility-icon">
                                 <i class="fas fa-running"></i>
