--- a/about.html
+++ b/about.html
@@ -28,6 +28,13 @@
             max-width: 100%;
         }
 
+        .school-logo {
+            height: 40px;
+            width: auto;
+            border-radius: 5px;
+            margin-top : 0px;
+        }
+
         .container {
             max-width: 100%;
             padding-left: 15px;
@@ -667,7 +674,7 @@
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <i class="fas fa-graduation-cap me-2"></i>Gurukul Public School
+                <img src="assets/images/logo_bg.png" alt="School Logo" class="school-logo"> Gurukul Public School
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
