--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,13 @@
             box-sizing: border-box;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+
+        .school-logo {
+            height: 60px;
+            width: auto;
+            border-radius: 5px;
+            margin-top : 20px;
+        }
         
         html, body {
             max-width: 100%;
@@ -473,7 +480,7 @@
         <div class="container header-content">
             <div class="logo">
                 <div class="logo-icon">
-                    <i class="fas fa-school"></i>
+                    <img src="assets/images/logo_bg.png" alt="School Logo" class="school-logo">
                 </div>
                 <div class="logo-text">
                     <h1>Gurukul Public School</h1>
@@ -661,11 +668,10 @@
                     <h4>Gurukul Public School</h4>
                     <p>Established in 2010, Gurukul Public School combines traditional values with modern education to nurture future leaders.</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.facebook.com/gurukul.hamirpur?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gurukulbaru0987?igsh=NXBrdHBkdmRna2Y4"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtube.com/@gurukulpublicschoolbaru5020?si=BIqX0mtdQ4Fqz6Gj"><i class="fab fa-youtube"></i></a>
+                        <a href="https://wa.me/917018002434"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
                 
