--- a/hostel.html
+++ b/hostel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostel Facilities - Gurukul Public School Baru</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -18,6 +18,30 @@
             max-width: 100%;
             overflow-x: hidden;
         }
+
+        .social-icons {
+            display: flex;
+            gap: 15px;
+            margin-top: 20px;
+        }
+        
+        .social-icons a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            color: white !important;
+            background-color: rgba(255, 255, 255, 0.1) !important;
+            border-radius: 50%;
+            transition: background-color 0.3s;
+            text-decoration: none;
+        }
+        
+        .social-icons a:hover {
+            background-color: #ffc107;
+        }
+
         .hostel-schedule-table th {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
@@ -112,7 +136,10 @@
                         <a class="nav-link" href="academics.html">Academics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="hostel.html">Hostel</a>
+                        <a class="nav-link active" href="hostel.html">Hostel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="transport.html">Transport</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admission.html">Admissions</a>
@@ -384,7 +411,14 @@
                         <h5 class="ms-2 mb-0">Gurukul Public School</h5>
                     </div>
                     <p class="text-white-50">Committed to providing quality education and fostering an environment of
-                        excellence.</p>
+                        excellence.                  
+                    </p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/gurukul.hamirpur?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gurukulbaru0987?igsh=NXBrdHBkdmRna2Y4"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtube.com/@gurukulpublicschoolbaru5020?si=BIqX0mtdQ4Fqz6Gj"><i class="fab fa-youtube"></i></a>
+                        <a href="https://wa.me/917018002434"><i class="fab fa-whatsapp"></i></a>
+                    </div>                    
                 </div>
                 <div class="col-lg-2 col-6">
                     <h5 class="mb-3">Quick Links</h5>
