--- a/school-section.html
+++ b/school-section.html
@@ -394,7 +394,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="assets/images/library-internal.jpg" alt="Library Internal View" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Library+Interior'">
+                        <img src="assets/images/library.jpg" alt="Library Internal View" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Library+Interior'">
                         <div class="gallery-overlay">
                             <h5>Library Internal View</h5>
                             <p>Quiet and spacious reading area</p>
@@ -404,7 +404,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="assets/images/computer-lab-view.jpg" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x350/3b82f6/ffffff?text=Computer+Lab'">
+                        <img src="assets/images/computer_lab.jpg" alt="Computer Lab" onerror="this.src='https://via.placeholder.com/400x350/3b82f6/ffffff?text=Computer+Lab'">
                         <div class="gallery-overlay">
                             <h5>Computer Lab</h5>
                             <p>Modern systems and learning environment</p>
@@ -414,7 +414,7 @@
 
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="assets/images/science-lab-view.jpg" alt="Science Lab" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Science+Lab'">
+                        <img src="assets/images/science_lab.jpg" alt="Science Lab" onerror="this.src='https://via.placeholder.com/400x350/1e40af/ffffff?text=Science+Lab'">
                         <div class="gallery-overlay">
                             <h5>Science Lab</h5>
                             <p>Hands-on experimental learning space</p>
