adding the emails

--- a/contact.html
+++ b/contact.html
@@ -585,10 +585,10 @@
                     </div>
                     <div class="info-details">
                         <h4>Email Addresses</h4>
-                        <p>General Inquiries: <a href="mailto:info@gurukulpublicschool.edu">info@gurukulpublicschool.edu</a></p>
-                        <p>Admissions: <a href="mailto:admissions@gurukulpublicschool.edu">admissions@gurukulpublicschool.edu</a></p>
+                        <p>General Inquiries: <a href="mailto:gurukulbaru@2021gmail.com">gurukulbaru@2021gmail.com</a></p>
+                        <p>Admissions: <a href="mailto:sharmaanupma608@gmail.com">sharmaanupma608@gmail.com</a></p>
                         <p>Principal: <a href="mailto:principal@gurukulpublicschool.edu">principal@gurukulpublicschool.edu</a></p>
-                        <p>HR & Careers: <a href="mailto:careers@gurukulpublicschool.edu">careers@gurukulpublicschool.edu</a></p>
+                        <p>HR & Careers: <a href="mailto:nirmlakumari989@gmail.com">nirmlakumari989@gmail.com</a></p>
                     </div>
                 </div>
                 
@@ -671,8 +671,7 @@
                         <a href="https://www.facebook.com/gurukul.hamirpur?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/gurukulbaru0987?igsh=NXBrdHBkdmRna2Y4"><i class="fab fa-instagram"></i></a>
                         <a href="https://youtube.com/@gurukulpublicschoolbaru5020?si=BIqX0mtdQ4Fqz6Gj"><i class="fab fa-youtube"></i></a>
-                        <a href="https://wa.me/917018002434"><i class="fab fa-whatsapp"></i></a>
-                    </div>
+ <a href="https://wa.me/919317961414"><i class="fab fa-whatsapp"></i></a>                    </div>
                 </div>
                 
                 <div class="footer-column">
