--- a/transport.html
+++ b/transport.html
@@ -313,8 +313,7 @@
                         <a href="https://www.facebook.com/gurukul.hamirpur?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/gurukulbaru0987?igsh=NXBrdHBkdmRna2Y4"><i class="fab fa-instagram"></i></a>
                         <a href="https://youtube.com/@gurukulpublicschoolbaru5020?si=BIqX0mtdQ4Fqz6Gj"><i class="fab fa-youtube"></i></a>
-                        <a href="https://wa.me/7018002434"><i class="fab fa-whatsapp"></i></a>
-                    </div>
+ <a href="https://wa.me/919317961414"><i class="fab fa-whatsapp"></i></a>                    </div>
                 </div>
                
                 <div class="col-lg-2 col-6">
