Render deployment setup

--- a/contact.html
+++ b/contact.html
@@ -587,7 +587,7 @@
                         <h4>Email Addresses</h4>
                         <p>General Inquiries: <a href="mailto:gurukulbaru@2021gmail.com">gurukulbaru@2021gmail.com</a></p>
                         <p>Admissions: <a href="mailto:sharmaanupma608@gmail.com">sharmaanupma608@gmail.com</a></p>
-                        <p>Principal: <a href="mailto:principal@gurukulpublicschool.edu">principal@gurukulpublicschool.edu</a></p>
+                        <p>Principal: <a href="mailto:vermah392@gmail.com">vermah392@gmail.com</a></p>
                         <p>HR & Careers: <a href="mailto:nirmlakumari989@gmail.com">nirmlakumari989@gmail.com</a></p>
                     </div>
                 </div>
