--- a/hostel.html
+++ b/hostel.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hostel Facilities - Gurukul Public School Baru</title>
+    <link rel="icon" type="image/png" href="assets/images/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -148,7 +149,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item ms-lg-3 mt-2 mt-lg-0">
-                        <button class="btn btn-primary px-4">Login</button>
+                         <a class="btn btn-primary" href="admin/login.php">Admin Login</a>
                     </li>
                 </ul>
             </div>
@@ -346,48 +347,32 @@
     <section class="fee-structure py-4 py-md-5">
         <div class="container">
             <h2 class="section-title text-center mb-3">Hostel Fee Structure</h2>
-            <p class="text-center text-muted mb-4 mb-md-5">Fees include boarding, lodging, laundry, and meals.</p>
 
             <div class="table-responsive">
                 <table class="table fee-table">
                     <thead>
                         <tr>
                             <th>CLASS/GRADE</th>
-                            <th>ANNUAL CHARGES</th>
                             <th>MESS CHARGES (Monthly)</th>
-                            <th>SECURITY (Refundable)</th>
+                            <th> Tution Fees </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><strong>Grade I - V</strong></td>
-                            <td>$1,000</td>
-                            <td>$200</td>
-                            <td>$500</td>
-                        </tr>
-                        <tr>
                             <td><strong>Grade VI - VIII</strong></td>
-                            <td>$1,200</td>
-                            <td>$250</td>
-                            <td>$500</td>
+                            <td>₨ 7,000</td>
+                            <td>₨ 3,000</td>
                         </tr>
                         <tr>
-                            <td><strong>Grade IX - X</strong></td>
-                            <td>$1,500</td>
-                            <td>$300</td>
-                            <td>$500</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Grade XI - XII</strong></td>
-                            <td>$1,800</td>
-                            <td>$350</td>
-                            <td>$500</td>
+                            <td><strong>Grade IX - XII</strong></td>
+                            <td>₨ 7,500</td>
+                            <td>₨ 3,500 - 4,000</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="alert alert-info mt-4" role="alert">
-                <strong>Note:</strong> Hostel fees are payable in advance on a quarterly basis.
+                <strong>Note:</strong> Total fees will be calculated as: Hostel Fees + Tution Fees
             </div>
         </div>
     </section>
